MAPLE-70 JDK 11 다운 작업