@@ -2,25 +2,34 @@ package com.maple.api.controller.dto;
 
 import com.maple.common.party.domain.Party;
 import com.maple.common.user.domain.User;
+import lombok.AllArgsConstructor;
+import lombok.Getter;
 import org.springframework.data.util.Pair;
 
 import java.time.OffsetDateTime;
 import java.util.List;
 
+import static java.util.stream.Collectors.toList;
+
 public class PartyGetAllDto {
 
-    public record PartyGetAllResponse(List<PartyGetAllData> parties) {
+    @Getter
+    @AllArgsConstructor
+    public static class PartyGetAllResponse {
+        private List<PartyGetAllData> parties;
+
     }
 
-    public record PartyGetAllData(
-            long id,
-            long leaderId,
-            String leaderNickname,
-            String name,
-            String description,
-            boolean isLeader,
-            OffsetDateTime createAt
-    ) {
+    @Getter
+    @AllArgsConstructor
+    public static class PartyGetAllData {
+        private long id;
+        private long leaderId;
+        private String leaderNickname;
+        private String name;
+        private String description;
+        private boolean isLeader;
+        private OffsetDateTime createAt;
 
         private PartyGetAllData(Party party, User user) {
             this(
@@ -31,8 +40,7 @@ public class PartyGetAllDto {
 
         public static List<PartyGetAllData> create(Pair<User, List<Party>> pair) {
             return pair.getSecond().stream()
-                    .map(it -> new PartyGetAllData(it, pair.getFirst()))
-                    .toList();
+                    .map(it -> new PartyGetAllData(it, pair.getFirst())).collect(toList());
         }
     }
 }
